src/test/ui/feature-gates/feature-gate-non_exhaustive.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0658]: non exhaustive is an experimental feature
=======
error[E0658]: the `#[non_exhaustive]` attribute is an experimental feature
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/feature-gate-non_exhaustive.rs:3:1
   |
LL | #[non_exhaustive]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/44109
   = help: add `#![feature(non_exhaustive)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
